# EldenRingLoadout

./: CMakeLists.txt  README.md  main.cpp
Header Files/: Armor.h  ArmorSet.h  Loadout.h  LoadoutLoader.h  LoadoutSaver.h  Physic.h  Spell.h  Spells.h  Stats.h  Talisman.h  Talismans.h  Weapon.h
IO/: LoadoutLoader.cpp  LoadoutSaver.cpp
Loadout/: Armor.cpp  ArmorSet.cpp  Loadout.cpp  Physic.cpp  Spell.cpp  Spells.cpp  Stats.cpp  Talisman.cpp  Talismans.cpp  Weapon.cpp
